--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 nekland_base_admin_homepage:
     pattern:  /
-    defaults: { _controller: NeklandBaseAdminBundle:Default:index }
+    defaults: { _controller: NeklandBaseAdminBundle:Home:index }
