--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,16 @@
         {
             "name": "ANDRIEUX François",
             "email": "spriteware@gmail.com"
+        },
+        {
+            "name": "MBECHEZI mlanawo",
+            "email": "mlanawo.mbechezi@ikimea.com"
         }
     ],
     "require": {
         "symfony/symfony":                  "2.3.*",
-        "knplabs/knp-menu-bundle":          "dev-master",
-        "sensio/framework-extra-bundle":    "*",
+        "knplabs/knp-menu-bundle":          "2.0.*@dev",
+        "sensio/framework-extra-bundle":    "2.3.*@dev",
         "doctrine/doctrine-bundle":         "*",
         "doctrine/orm":                     "*",
         "symfony/assetic-bundle":           ">=2.0,<3.0",
