--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -5,3 +5,9 @@ services:
 #    nekland_base_admin.example:
 #        class: %nekland_base_admin.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
+
+# Form type service registration
+    form.type.gender:
+        class: Nekland\Bundle\BaseAdminBundle\Form\Type\NeklandEditorType
+        tags:
+            - { name: form.type, alias: nekland_editor }
