--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -7,7 +7,14 @@ services:
 #        arguments: [@service_id, "plain_value", %parameter%]
 
 # Form type service registration
-    form.type.nekland_editor:
+    nekland_admin.form.type.editor:
         class: Nekland\Bundle\BaseAdminBundle\Form\Type\NeklandEditorType
+        arguments: [@nekland_admin.form.transformer.html_purifier]
         tags:
             - { name: form.type, alias: nekland_editor }
+
+# No html purifier transformer is defined as service in the HTMLPurifier bundle
+# So we need to add it
+    nekland_admin.form.transformer.html_purifier:
+        class: Exercise\HTMLPurifierBundle\Form\HTMLPurifierTransformer
+        arguments: [@exercise_html_purifier.default]
