--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -18,3 +18,9 @@ services:
     nekland_admin.form.transformer.html_purifier:
         class: Exercise\HTMLPurifierBundle\Form\HTMLPurifierTransformer
         arguments: [@exercise_html_purifier.default]
+
+
+    twig.extension.text:
+        class: Twig_Extensions_Extension_Text
+        tags:
+            - { name: twig.extension }
