--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,26 +1,3 @@
-parameters:
-#    nekland_base_admin.example.class: Nekland\Bundle\BaseAdminBundle\Example
-
-services:
-#    nekland_base_admin.example:
-#        class: %nekland_base_admin.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
-
-# Form type service registration
-    nekland_admin.form.type.editor:
-        class: Nekland\Bundle\BaseAdminBundle\Form\Type\NeklandEditorType
-        arguments: [@nekland_admin.form.transformer.html_purifier]
-        tags:
-            - { name: form.type, alias: nekland_editor }
-
-# No html purifier transformer is defined as service in the HTMLPurifier bundle
-# So we need to add it
-    nekland_admin.form.transformer.html_purifier:
-        class: Exercise\HTMLPurifierBundle\Form\HTMLPurifierTransformer
-        arguments: [@exercise_html_purifier.default]
-
-
-    twig.extension.text:
-        class: Twig_Extensions_Extension_Text
-        tags:
-            - { name: twig.extension }
+imports:
+    - { resource: services/admin.yml }
+    - { resource: services/twig.yml }
