--- a/Resources/config/services/admin.yml
+++ b/Resources/config/services/admin.yml
@@ -2,7 +2,8 @@ parameters:
     nekland_admin.routing.loader.class: Nekland\Bundle\BaseAdminBundle\Routing\AdminLoader
     nekland_admin.crud.manager.class: Nekland\Bundle\BaseAdminBundle\Crud\Manager
     nekland_admin.crud.configuration.manager.class: Nekland\Bundle\BaseAdminBundle\Crud\Configuration\ConfigurationManager
-    nekland_admin.crud.controller.generator.class: Nekland\Bundle\BaseAdminBundle\Crud\Controller\ControllerGenerator
+    nekland_admin.crud.controller.generator.class: Nekland\Bundle\BaseAdminBundle\Crud\Routing\RouteGenerator
+    nekland_admin.listener.crud.menu.class: Nekland\Bundle\BaseAdminBundle\Crud\Listener\MenuListener
 
 services:
     nekland_admin.routing.loader:
@@ -25,3 +26,7 @@ services:
     nekland_admin.crud.controller.generator:
         class: %nekland_admin.crud.controller.generator.class%
         arguments: [@nekland_admin.crud.configuration.manager]
+
+    nekland_admin.listener.crud.menu:
+        class: %nekland_admin.listener.crud.menu.class%
+        arguments: [@nekland_admin.crud.manager]
