--- a/Resources/config/services/admin.yml
+++ b/Resources/config/services/admin.yml
@@ -5,6 +5,7 @@ parameters:
     nekland_admin.crud.controller.generator.class: Nekland\Bundle\BaseAdminBundle\Crud\Routing\RouteGenerator
     nekland_admin.listener.crud.menu.class: Nekland\Bundle\BaseAdminBundle\Crud\Listener\MenuListener
     nekland_admin.listener.crud.controller.class: Nekland\Bundle\BaseAdminBundle\Crud\Listener\ControllerListener
+    nekland_admin.crud.form.generator.class: Nekland\Bundle\BaseAdminBundle\Crud\Form\Generator
 
 services:
     nekland_admin.routing.loader:
@@ -39,3 +40,7 @@ services:
         arguments: [@nekland_admin.crud.manager]
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
+
+    nekland_admin.crud.form.generator:
+        class: %nekland_admin.crud.form.generator.class%
+        arguments: [@nekland_admin.crud.manager, @annotation_reader, @form.factory]
