--- a/Resources/config/services/admin.yml
+++ b/Resources/config/services/admin.yml
@@ -6,6 +6,7 @@ parameters:
     nekland_admin.listener.crud.menu.class: Nekland\Bundle\BaseAdminBundle\Crud\Listener\MenuListener
     nekland_admin.listener.crud.controller.class: Nekland\Bundle\BaseAdminBundle\Crud\Listener\ControllerListener
     nekland_admin.crud.form.generator.class: Nekland\Bundle\BaseAdminBundle\Crud\Form\Generator
+    nekland_admin.crud.configuration.hydrator.class: Nekland\Bundle\BaseAdminBundle\Crud\Configuration\ConfigurationHydrator
 
 services:
     nekland_admin.routing.loader:
@@ -24,6 +25,7 @@ services:
 
     nekland_admin.crud.configuration.manager:
         class: %nekland_admin.crud.configuration.manager.class%
+        arguments: [@nekland_admin.crud.configuration.hydrator]
 
     nekland_admin.crud.controller.generator:
         class: %nekland_admin.crud.controller.generator.class%
@@ -44,3 +46,7 @@ services:
     nekland_admin.crud.form.generator:
         class: %nekland_admin.crud.form.generator.class%
         arguments: [@nekland_admin.crud.manager, @annotation_reader, @form.factory]
+
+    nekland_admin.crud.configuration.hydrator:
+        class: %nekland_admin.crud.configuration.hydrator.class%
+        arguments: [@event_dispatcher]
