--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     ],
     "require": {
         "symfony/symfony":                  ">=2.3,<3.0",
-        "knplabs/knp-menu-bundle":          "2.0.*@dev",
+        "knplabs/knp-menu-bundle":          "dev-master",
+        "knplabs/knp-menu":                 "dev-master",
         "sensio/framework-extra-bundle":    ">=2.3,<3.0",
         "doctrine/doctrine-bundle":         "*",
         "doctrine/orm":                     "*",
