--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,17 @@
 	"license": "MIT",
 	"authors": [
         {
-            "name": "VEBER Maxime",
+            "name": "Maxime Veber",
             "email": "nek.dev@gmail.com",
             "homepage": "http://nekland.fr"
         },
         {
-            "name": "Yohan GIARELLI",
+            "name": "Yohan Giarelli",
             "email": "yohan@giarel.li",
             "homepage": "http://yohan.giarel.li"
         },
         {
-            "name": "MBECHEZI mlanawo",
+            "name": "Mlanawo Mbechezi",
             "email": "mlanawo.mbechezi@ikimea.com"
         }
     ],
