--- a/Resources/config/services/admin.yml
+++ b/Resources/config/services/admin.yml
@@ -1,7 +1,6 @@
 parameters:
     nekland_admin.crud.manager.class: Nekland\Bundle\BaseAdminBundle\Crud\Manager
     nekland_admin.crud.configuration.manager.class: Nekland\Bundle\BaseAdminBundle\Crud\Configuration\ConfigurationManager
-    nekland_admin.crud.controller.generator.class: Nekland\Bundle\BaseAdminBundle\Crud\Routing\RouteGenerator
     nekland_admin.crud.configuration.hydrator.class: Nekland\Bundle\BaseAdminBundle\Crud\Configuration\ConfigurationHydrator
 
 services:
@@ -12,15 +11,12 @@ services:
 
     nekland_admin.crud.manager:
         class: %nekland_admin.crud.manager.class%
-        arguments: [@kernel, @nekland_admin.crud.configuration.manager, @nekland_admin.crud.controller.generator]
+        arguments: [@kernel, @nekland_admin.crud.configuration.manager]
 
     nekland_admin.crud.configuration.manager:
         class: %nekland_admin.crud.configuration.manager.class%
         arguments: [@nekland_admin.crud.configuration.hydrator]
 
-    nekland_admin.crud.controller.generator:
-        class: %nekland_admin.crud.controller.generator.class%
-        arguments: [@nekland_admin.crud.configuration.manager]
 
     nekland_admin.crud.configuration.hydrator:
         class: %nekland_admin.crud.configuration.hydrator.class%
