--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,12 @@
         }
     ],
     "require": {
-        "symfony/symfony":                  ">=2.3,<3.0",
+        "symfony/symfony":                  "~2.3@dev",
         "knplabs/knp-menu-bundle":          "2.0.*@dev",
-        "sensio/framework-extra-bundle":    ">=2.3,<3.0",
+        "sensio/framework-extra-bundle":    ">=2.3",
         "doctrine/doctrine-bundle":         "*",
         "doctrine/orm":                     "*",
-        "symfony/assetic-bundle":           ">=2.0,<3.0",
+        "symfony/assetic-bundle":           "~2.0@dev",
         "exercise/htmlpurifier-bundle":     "dev-master"
     },
     "autoload": {
