--- a/Resources/config/services/form.yml
+++ b/Resources/config/services/form.yml
@@ -5,6 +5,7 @@ parameters:
     nekland_admin.form.basic_handler.class: Nekland\Bundle\BaseAdminBundle\Crud\Form\Handler
     nekland_admin.crud.form.generator.class: Nekland\Bundle\BaseAdminBundle\Crud\Form\Generator
     nekland_admin.form.transformer.file.class: Nekland\Bundle\BaseAdminBundle\Form\DataTransformer\StringToFileTransformer
+    nekland_admin.form.datetime.class: Nekland\Bundle\BaseAdminBundle\Form\Type\NeklandDatetimeType
 
 services:
 # Form type service registration
@@ -24,6 +25,11 @@ services:
     nekland_admin.crud.form.generator:
         class: %nekland_admin.crud.form.generator.class%
         arguments: [@nekland_admin.crud.manager, @form.factory, @translator, @nekland_admin.form.transformer.file]
+
+    nekland_admin.form.datetime:
+        class: %nekland_admin.form.datetime.class%
+        tags:
+            - { name: form.type, alias: nekland_admin_datetime }
 
 ###############
 # Handlers
