--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "doctrine/doctrine-bundle":         "*",
         "doctrine/orm":                     "*",
         "symfony/assetic-bundle":           "~2.0@dev",
-        "exercise/htmlpurifier-bundle":     "~0.1.0"
+        "exercise/htmlpurifier-bundle":     "~0.1.0",
+        "twig/extensions":                  "~1.3"
     },
     "autoload": {
         "psr-0": { "Nekland\\Bundle\\BaseAdminBundle": "" }
